tests/e2e/negative/n0014_wrong_enum_variant.cryo
// @test: wrong_enum_variant
// @expect: compile_fail
// @mode: raw
// @description: Using non-existent enum variant should fail
// @tags: enums, errors

namespace NegWrongVariant;

enum Color {
    Red;
    Green;
    Blue;
}

function main() -> int {
    const c: Color = Color::Yellow;
    return 0;
}
